いろいろ変更

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <button onclick="playOsc('square')">Square</button>
   <button onclick="playOsc('sawtooth')">Sawtooth</button>
   <button onclick="stopOsc()">Stop</button>
-  <input id="gain" type="range" />
+  <p>gain:<input id="gain" type="range" /></p>
+  <p>attack:<input id="attack" type="range" /></p>
+  <p>decay:<input id="decay" type="range" /></p>
   <script src="./play-osc.js"></script>
 </body>
 
