--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <button onclick="playOsc('square')">Square</button>
   <button onclick="playOsc('sawtooth')">Sawtooth</button>
   <button onclick="stopOsc()">Stop</button>
+  <p>freq:<input id="freq" type="range" /></p>
   <p>gain:<input id="gain" type="range" /></p>
   <p>attack:<input id="attack" type="range" /></p>
-  <p>decay:<input id="decay" type="range" /></p>
+  <p>release:<input id="release" type="range" /></p>
   <script src="./play-osc.js"></script>
 </body>
 
